[gd_scene load_steps=4 format=3 uid="uid://dqy0x3qlt1fqc"]

[ext_resource type="Script" path="res://network/test.gd" id="1_dkaoy"]
[ext_resource type="Script" path="res://network/rabbit/simintech_client.gd" id="2_mvf46"]
[ext_resource type="PackedScene" uid="uid://iyn3ysedu13f" path="res://core/files/file_uploader.tscn" id="2_o16br"]

[node name="Test" type="Node"]
script = ExtResource("1_dkaoy")

[node name="File Uploader" parent="." instance=ExtResource("2_o16br")]

[node name="RabbitMqClient" type="Node" parent="."]
script = ExtResource("2_mvf46")

[node name="ReadButton" type="Button" parent="."]
offset_left = 256.0
offset_top = 687.0
offset_right = 595.0
offset_bottom = 814.0
theme_override_font_sizes/font_size = 50
text = "READ"

[node name="WriteButton" type="Button" parent="."]
offset_left = 1176.0
offset_top = 687.0
offset_right = 1515.0
offset_bottom = 814.0
theme_override_font_sizes/font_size = 50
text = "Write"

[node name="HTTPRequest" type="HTTPRequest" parent="."]
